# AGEGIS

./: README.md
api/: config.example.php  config.php  db-test.php  index.php
assets/: aegis-common.css  aegis-i18n.js
desktop/: CMakeLists.txt  Makefile  README.md  build.sh
desktop/src/: assets_generated.h  main.cpp
desktop/tools/: embed_assets.py
desktop/web/: trip-command.html
desktop/web/assets/: aegis-common.js
server/: db-test.js  db.js  package.json  server.js
